# visor_hello_world

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .gitmodules.save  2bmain.nasm  2bxcodes.nasm  CMakeLists.txt  Makefile  README.md  debug.c  display.c  doom.c  fileio_usb.c  interrupts.c  main.c  main.h  rom.ld  toolchain-xbox.cmake  toolchain-xboxbios.cmake  usb.c
config_fatfs/: ffconf.h  ffsystem.c
config_freertos/: CMakeLists.txt  FreeRTOSConfig.h  freertos_irq.h  irq.S  irq.c  pic_ack.patch
config_tinyusb/: chip.h  tusb_config.h
freertos_configuration/: FreeRTOSConfig.h
lib/PureDOOM/: PureDOOM.h
lib/fatfs/: CMakeLists.txt
lib/font/: unscii_16.h
lib/ia32/: CMakeLists.txt  ia32_compact.h  io.h  pci_io.c  pci_io.h
lib/libfatx/: fatx.c  fatx_dir.c
lib/lz4/: lz4.c
lib/midi/: LICENSE  midiplay.c  midiplay.h  synth.c  synth.h
lib/pc/: CMakeLists.txt  ata.c  ata.h  atapi.h  cpu.h  dma8237.c  dma8237.h  ia32_compact.h  ia32_msr.h  idt.c  idt.h  io.h  lock.h  microcode.c  microcode.h  pci_io.c  pci_io.h  pic8259.c  pic8259.h  pit8254.h  smbus.c  smbus.h
lib/xbox/: 2bboot.c  2bmain.nasm  2bxcodes.nasm  CMakeLists.txt  audio.c  audio.h  boot.c  eeprom.c  eeprom.h  encoder.c  encoder.h  gpu.c  gpu.h  led.c  led.h  nic.h  pci.c  pci.h  serial.c  serial.h  smbus.c  smbus.h  timer.c  video.c  video.h  xbox.c  xbox.h  xtime.c  xtime.h
scripts/: calculate_usage.py  compress_rom.py
src/: debug.c  display.c  doom.c  doom_audio.c  doom_input.c  doom_midi.c  fileio.c  fileio.h  fileio_usb.c  interrupts.c  main.c  main.h  usb.c
src/fileio/: fs_hw_usb.c  fs_sw_fat.c  fs_sw_fatx.c
